--- a/GenericoGerry/gerry2/JQuery1.html
+++ b/GenericoGerry/gerry2/JQuery1.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta http-equiv="content-type" content="text/html"; charset="utf-8" />
-	<title> Practicando con jQuery </title>
-	<script type="text/javascript" src="jquery-2.1.3.js"></script>
-	<script>
+    <meta http-equiv="content-type" content="text/html" ; charset="utf-8" />
+    <title> Practicando con jQuery </title>
+    <script type="text/javascript" src="jquery-2.1.3.js"></script>
+    
+    <script>
 
-		$(document).ready(function() {
-			// Aqui se coloca el código
-		});
 
-	</script>
-	
+        $(document).ready(function () {
+                    // Aqui se coloca el código
+                    $("a").click(function () {
+
+
+                            alert("Has pulsado en el hipervínculo");
+                        });
+                
+    </script>
+
 </head>
+
 <body>
+
+    <a href="http://jquery.com/download/">Enlace</a>
+
+    <h3>Lorem Ipsum whatever</h3>
+    <p>Bblabla consecratur tamtum pelis et ossa fuit</p>
 
 
 
 </body>
-</html>	 
+
+</html>
