--- a/GenericoGerry/gerry2/JQuery10.HTML
+++ b/GenericoGerry/gerry2/JQuery10.HTML
@@ -7,11 +7,24 @@
     <script type="text/javascript" src="jquery-2.1.3.js"></script>
 </head>
 
+
+
 <body>
-    
+
+    <div class="animacion">
+        <h1>Esto es un título animado</h1>
+        <p>____________________________________________</p>
 
 
-    <input type="button" name="oculta" value="Oculta/muestra elementos" class="ocultar"/>
+    </div>
+
+    <br>
+    <br>
+
+
+
+
+    <input type="button" name="oculta" value="Oculta/muestra párrafos" class="ocultar" />
 
 
 
@@ -35,20 +48,97 @@
             Nam neque mauris, vestibulum eget condimentum ut, maximus at lectus. Donec mollis lobortis semper.</p>
     </div>
 
+
+    <input type="button" name="oculta" value="Oculta/muestra elementos de lista" class="ocultar2" />
+
+    <div class="lista">
+
+        <ul>
+            <li>Caso 1</li>
+            <li>Caso 2</li>
+            <li>Caso 3</li>
+            <li>Caso 4</li>
+
+
+
+        </ul>
+
+        <img class="imagen1" src="https://s7d2.scene7.com/is/image/TWCNews/Hot_sun" alt="Smiley face" height="200"
+            width="350">
+
+        <img class="imagen2"
+            src="https://lh3.googleusercontent.com/proxy/xVNUk_Q9ai01-GQI-18NyrFXBGp1jr6T75DKgQ7H3jMrj5QlrRhjvEYx2UNQhypMUABZCMd3mFMzEiace5HQl60yi6VGj_6WvZuzR1InD114uvq-mxOIsORVDrNQ9HlRtA"
+            alt="Smiley face" height="200" width="350">
+
+
+
+
+    </div>
+
+
+
+
     <script language="javascript" type="text/javascript">
-
-$(document).ready(function(){
-  $(".ocultar").click(function(){
-    $("#parrafo1").toggle(3000);
-    $("#parrafo2").toggle(2000);
-    $("#parrafo3").toggle(1000);
-
-  });
-});
+        $(document).ready(function () {
+            $(".ocultar").click(function () {
+                $("p").toggle(3000);
 
 
+            });
+        });
+
+        $(document).ready(function () {
+            $(".ocultar2").click(function () {
+                $("li").toggle(1000);
 
 
+            });
+        });
+
+
+        $(document).ready(function () {
+            $('.imagen2').hide();
+
+        });
+
+
+
+
+        $("li").on({
+
+            mouseenter: function () {
+                $(".imagen1").hide();
+                $(".imagen2").show();
+
+
+            },
+
+            mouseleave: function () {
+                $(".imagen1").show();
+                $(".imagen2").hide();
+
+            },
+
+        });
+
+
+
+        $(".animacion").on({
+
+            mouseenter: function () {
+                $(".animacion").animate({"font-size":"30px"},3000);
+
+
+            },
+
+            mouseleave: function () {
+                $(".animacion").animate({"font-size":"15px"}, 1000);
+
+               
+
+            },
+
+        });
     </script>
 
 </body>
