--- a/GenericoGerry/gerry2/ejercicioPosicionamientoNormal2/index.html
+++ b/GenericoGerry/gerry2/ejercicioPosicionamientoNormal2/index.html
@@ -20,9 +20,9 @@
 </HEAD>
 
 <script>
-	$(document).ready(function () {
+	// columna tabla efecto
 
-		// columna tabla efecto
+	$(document).ready(function () {
 
 		$(".negrita").on({
 
@@ -95,12 +95,9 @@
 		$(".menosLis").on({
 			click: function () {
 
-				$(".masLis").remove ("li");
-				
+				$(".masLis").remove("li");
 
 			},
-
-
 
 		});
 
@@ -136,10 +133,10 @@
 	// efectos al pinchar titulo
 	$(document).ready(function () {
 		$(".pprincipal").click(function () {
-			$('.tabla').toggle("slow");
+			$('#secundario').toggle("slow");
 		});
 		$(".pprincipal").click(function () {
-			$('.pderecho').toggle("fast");
+			$('#principal').toggle(5000);
 		});
 		$(".pprincipal").click(function () {
 			$(".pizquierdo").toggle(5000);
@@ -147,6 +144,18 @@
 		$(".pprincipal").click(function () {
 			$("#menu").toggle(2500);
 		});
+		$(".pprincipal").click(function () {
+			$(".iconos").slideToggle(2500);
+		});
+		$(".pprincipal").click(function () {
+			$(".wiki").fadeOut(2500);
+		});
+	
+
+
+
+
+
 	});
 </script>
 
